added to index css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
+  <meta name='viewport' content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <title>Great Idea - Responsive I</title>
 
@@ -11,6 +13,111 @@
 </head>
 
 <body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+
+  <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+  <div class="container">
+      <div class="great">
+          <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+      </div>
+    <div class="top-container">
+      <nav class="nav">
+
+
+        <a href="services.html">Services</a>
+        <a href="services.html">Product</a>
+        <a href="services.html">Vision</a>
+        <a href="services.html">Features</a>
+        <a href="services.html">About</a>
+        <a href="services.html">Contact</a>
+
+      </nav>
+
+    </div>
+
+    <div class="top-images">
+      <div class='Iod'>
+
+        <h1>Innovation<br>
+          On<br>
+          Demand<br>
+          <button class="button">Get Started</button>
+        </h1>
+      </div>
+      <div class="circle">
+        <img src="img/header-img.png" width="600" height="600" alt="Image of a code snippet.">
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <section class="content">
+
+    <div class='Features'>
+      <h3>Features</h3>
+      <p>
+        Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </p>
+    </div>
+
+    <div class='About'>
+      <h3>About</h3>
+      <p>
+        Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </p>
+    </div>
+  </section>
+  <section class="img-container">
+
+    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+  </section>
+  </div>
+  <section class="bottom-content">
+    <div class="spv">
+      <div class='Services'>
+        <h3>Services</h3>
+        <p>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+      <div class='Product'>
+        <h3>Product</h3>
+        <p>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+      <div class='Vision'>
+        <h3>Vision</h3>
+        <p>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="contact">
+      <h1>Contact</h1>
+    </div>
+    <address>
+      123 Way 456 Street<br>
+      Somewhere, USA<br>
+      <br>
+      1 (888) 888-8888<br>
+      <br>
+      sales@greatidea.io
+    </address>
+    <div class="copyright">
+      Copyright Great Idea! 2018
+    </div>
+  </footer>
+  <!-- Copy and paste your HTML from the first UI project here -->
+
+  </div>
 </body>
+
 </html>
