fixed all errors

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
  <!-- Copy and paste your HTML from the first UI project here -->
   <header class="container">  
-    <div class="great">
-      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-    </div>
+  <div class="great">
+  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  </div>
     
     <nav class="nav">
 
@@ -34,24 +34,19 @@
   </header>
     
 
-    <div class="top-images">
-      <div class='Iod'>
-
+  <div class="top-images">
+    <div class="Iod">
       <h1>Innovation<br>
           On<br>
           Demand<br>
           <button class="button">Get Started</button>
-        </h1>
-      </div>
+        </h1>     
       <div class="circle">
-        <img class='cirlogo' src="img/header-img.png" width="450" height="450" alt="Image of a code snippet.">
+        <img class='cirlogo' src="img/header-img.png" alt="Image of a code snippet.">
       </div>
     </div>
   </div>
-  </div>
-
   <section class="content">
-
     <div class='Features'>
       <h3>Features</h3>
       <p>
@@ -68,11 +63,11 @@
       </p>
     </div>
   </section>
-  <section class="img-container">
+
 
     <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  </section>
-  </div>
+  
+  
   
     <div class="spv">
       <div class='Services'>
@@ -111,9 +106,9 @@
       <br>
       sales@greatidea.io
     </address>
-    <div class="copyright">
+  <div class="copyright">
       Copyright Great Idea! 2018
-    </div>
+  </div>
   </footer>
  
   </div>
