--- a/services.html
+++ b/services.html
@@ -18,23 +18,23 @@
 <body>
 
   <header class="top">
-    <nav class="navtext">
-      <a href="index.html">Home</a>
-      <a href="#">Product</a>
-      <a href="#">Vision</a>
-      <a href="#">Features</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+    <!-- <nav class="navtext"> -->
+      <a href="index.html">Example 1</a>
+      <a href="#">Example 3</a>
+      <a href="#">Example 4</a>
+      <a href="#">Example 5</a>
+      <a href="#">Example 6</a>
+      <a href="#">Example 7</a>
 
-    </nav>
+    <!-- </nav> -->
  
-
-  <div class="great">
+  <div class="container1">
+    <div class="great">
 
       <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
     </div> 
   </header>
-  <div class="container1">
+  
     
     <img class="serv-img" src="img/services-header.jpg" alt="Our services header image">
     <div class="serv">
