fixed responsive errors

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     
     <nav class="nav">
 
-        <a href="services.html">Services</a>
-        <a href="services.html">Product</a>
-        <a href="services.html">Vision</a>
-        <a href="services.html">Features</a>
-        <a href="services.html">About</a>
-        <a href="services.html">Contact</a>
+        <a href="services.html">Example 2</a>
+        <a href="services.html">Example 3</a>
+        <a href="services.html">Example 4</a>
+        <a href="services.html">Example 5</a>
+        <a href="services.html">Example 6</a>
+        <a href="services.html">Example 7</a>
 
      </nav>
     
